fix(PromptComponent): style gap

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -1,1 +1,5 @@
 @import "default-theme-overrides.css";
+
+:root {
+    --prompt-gap: calc(5rem / 16);
+}
